# School

./: .~lock.english_hw.odt#  README.md  english_hw.odt
AM/: Übungsblatt für die 4. Schularbeit 3. Jahrgang 2018.docx
DE/: Textsorte_Erorterung.docx  de_eröterung.odt
DIC/: AvrMicrocontroller644P.pptx  DigitaleSignalverarbeitung_FIR_FensterfunktionenSchüler.docx  dic.docx
FSST/: CPP-operator-overloading-intarray.odt  (+1 more)
FSST/courses-master/FSST-ALGO/05-CALCULATOR-scanner-postfix-ebnf/04-DIY/01-diy-postfix-calculator-with-pow/: CMakeLists.txt  readme.md
FSST/courses-master/FSST-ALGO/05-CALCULATOR-scanner-postfix-ebnf/04-DIY/01-diy-postfix-calculator-with-pow/include/: postfixcalculator.h
FSST/courses-master/FSST-ALGO/05-CALCULATOR-scanner-postfix-ebnf/04-DIY/01-diy-postfix-calculator-with-pow/test/: test-postfix-calculator.cpp
FSST/courses-master/WEB-NW-PROG/01-SOCKET/02-ueben/AB-SOCKET-CPP-streamcipher-diffie-hellman/03-socket-quit-fork/: CMakeLists.txt  socket-quit-fork.md
FSST/courses-master/WEB-NW-PROG/01-SOCKET/02-ueben/AB-SOCKET-CPP-streamcipher-diffie-hellman/03-socket-quit-fork/src/: simple_client_main.cpp  simple_server_main.cpp
FSST/courses-master/WEB-NW-PROG/01-SOCKET/02-ueben/AB-SOCKET-CPP-streamcipher-diffie-hellman/05-socket-secure/: CMakeLists.txt  socket-secure.md
FSST/courses-master/WEB-NW-PROG/01-SOCKET/02-ueben/AB-SOCKET-CPP-streamcipher-diffie-hellman/05-socket-secure/include/: ClientSocket_secure.h
FSST/courses-master/WEB-NW-PROG/01-SOCKET/02-ueben/AB-SOCKET-CPP-streamcipher-diffie-hellman/05-socket-secure/src/: ClientSocket.cpp  ClientSocket_secure.cpp  ServerSocket_secure.cpp  Socket.cpp  simple_client_main.cpp  simple_server_main.cpp
FSST/courses-master/WEB-NW-PROG/01-SOCKET/02-ueben/AB-SOCKET-CPP-streamcipher-diffie-hellman/07-alice-and-bob/: CMakeLists.txt  alice-and-bob.md
FSST/courses-master/WEB-NW-PROG/01-SOCKET/02-ueben/AB-SOCKET-CPP-streamcipher-diffie-hellman/07-alice-and-bob/include/: ClientSocket.h  DiffieHellman.h  ServerSocket_secure.h  SocketException.h  cipherstream.h  trustcenter.h
FSST/courses-master/WEB-NW-PROG/01-SOCKET/02-ueben/AB-SOCKET-CPP-streamcipher-diffie-hellman/07-alice-and-bob/src/: ClientSocket_secure.cpp  ServerSocket_secure.cpp  alice.cpp  bob.cpp
temp/03-oop123/04_cipher_diffie_hellman/: AB-CPP-OOP-krypto-cipher.odt  CMakeLists.txt  readme.md
temp/03-oop123/04_cipher_diffie_hellman/include/: addsubstitution.h  cipher.h  dhcipher.h  streamcipher.h  xorsubstitution.h
temp/03-oop123/04_cipher_diffie_hellman/src/: addsubstitution.cpp  cipher.cpp  dhcipher.cpp  streamcipher.cpp  xorsubstitution.cpp
temp/03-oop123/04_cipher_diffie_hellman/test/: a.out  test-addsubstitution.cpp  test-diffie-hellman.cpp  test-streamcipher.cpp  test-xorsubstitution.cpp
(+2644 files in other folders)
